updated jpg file.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h2 class="animate-on-scroll">about us (me.)</h2>
             <p class="animate-on-scroll">Hey! my name is Tobi Odesina and I graduated from West Chester University with my B.S. in Computer Science. 
                 I am currently working towards becoming a Software Engineer. I enjoy running, playing basketball, and playing video games in my free time. I coded this website. Feel free to scroll.</p>
-                <img src="./images/gradPic.jpg" alt="smiling because no more school." class="animate-on-scroll">
+                <img src="./images/gradPic.JPG" alt="smiling because no more school." class="animate-on-scroll">
                
         </section>
 
