--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class ="boxes">
                 <div class="box animate-on-scroll"> <h1><a href="./blog/index.html">sports blog.</a></h1></div>
-                <div class="box animate-on-scroll"><h1>pygame.</h1></div>
+                <div class="box animate-on-scroll"><h1><a href="https://github.com/TobioCode/pygame-pong">pygame.</a></h1></div>
                 <div class="box animate-on-scroll"><h1>stock trading bot.</h1></div>
             </div>
         </section>
