--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             <h2 class="animate-on-scroll">my projects.</h2>
 
             <div class ="boxes">
-                <div class="box animate-on-scroll"> <h1><a href="./blog/index.html">sports blog.</a></h1></div>
+                <div class="box animate-on-scroll"> <h1><a href="https://tobiocode.github.io/weather-app/">weather app.</a></h1></div>
                 <div class="box animate-on-scroll"><h1><a href="https://github.com/TobioCode/pygame-pong">pygame.</a></h1></div>
+                <div class="box animate-on-scroll"> <h1><a href="./blog/index.html">sports blog.</a></h1></div>
                 <div class="box animate-on-scroll"><h1>stock trading bot.</h1></div>
             </div>
         </section>
